# src/swagger/doc/swagger.json
@@ -259,6 +259,19 @@
         }
       }
     },
+    "/api/article/search": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "Endpoint to Authentication a user",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/article/{id}": {
       "get": {
         "tags": [
